# pywui-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: example.spec  pywui.conf.json
example/app/: package-lock.json
pywui_cli/: __init__.py  builder.py  engine.py  installer.py
pywui_cli/stubs/: main.py  pywui.conf.json
vueapp/: Dockerfile  main.py  pywui.conf.json  vueapp.spec
vueapp/.github/workflows/: build.yml
vueapp/app/: package-lock.json  package.json
vueapp/dmg_temp/vueapp.app/Contents/: Info.plist
vueapp/dmg_temp/vueapp.app/Contents/_CodeSignature/: CodeResources
