[tool.poetry]
name = "pywui-cli"
version = "0.1.3"
description = "Pywui CLI for starting pywui project."
authors = ["Tsiresy Milà <tsiresymila@gmail.com>"]
readme = "README.md"
keywords = ["pywui", "pywebview", "pyinstaller", "tauri", "vite"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
minijinja = "^2.2.0"
rich-click = "^1.8.3"
yaspin = "^3.1.0"
ujson = "^5.10.0"


[tool.poetry.scripts]
pywui = "pywui_cli:cli"

[tool.poetry.group.dev.dependencies]
pywui = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

